frameworks/backend/redis/content/operate/rs/7.4/references/rest-api/objects/cluster/_index.md
---
type: "Framework Learn Page"
framework: "Redis"
source_repo: "https://github.com/redis/docs.git"
source_branch: "main"
source_path: "content/operate/rs/7.4/references/rest-api/objects/cluster/_index.md"
source_commit: "f8693349287b0efbef3c865b6f6a2aceca88594d"
source_commit_short: "f869334"
source_commit_date: "2026-08-28T10:01:19-05:00"
generated_at: "2026-08-29T09:38:55.779620Z"
---
# _Index

---
Title: Cluster object
alwaysopen: false
categories:
- docs
- operate
- rs
description: An object that represents a cluster
hideListLinks: true
linkTitle: cluster
weight: $weight
url: '/operate/rs/7.4/references/rest-api/objects/cluster/'
---

An API object that represents the cluster.

| Name | Type/Value | Description |
|------|------------|-------------|
| alert_settings | [alert_settings]({{< relref "/operate/rs/7.4/references/rest-api/objects/cluster/alert_settings" >}}) object | Cluster and node alert settings |
| bigstore_driver | 'speedb'<br />'rocksdb' | Storage engine for Auto Tiering |
| cluster_ssh_public_key | string | Cluster's autogenerated SSH public key |
| cm_port | integer, (range:&nbsp;1024-65535) | UI HTTPS listening port |
| cm_session_timeout_minutes | integer (default:&nbsp;15) | The timeout (in minutes) for the session to the CM |
| cnm_http_max_threads_per_worker | integer (default: 10) | Maximum number of threads per worker in the `cnm_http` service (deprecated) |
| cnm_http_port | integer, (range:&nbsp;1024-65535) | API HTTP listening port |
| cnm_http_workers | integer (default: 1) | Number of workers in the `cnm_http` service |
| cnm_https_port | integer, (range:&nbsp;1024-65535) | API HTTPS listening port |
| control_cipher_suites | string | Specifies the enabled ciphers for the control plane. The ciphers are specified in the format understood by the BoringSSL library. |
| control_cipher_suites_tls_1_3 | string | Specifies the enabled TLS 1.3 ciphers for the control plane. The ciphers are specified in the format understood by the BoringSSL library. (read-only) |
| crdb_coordinator_port | integer, (range:&nbsp;1024-65535) (default:&nbsp;9081) | CRDB coordinator port |
| crdt_rest_client_retries | integer | Maximum number of retries for the REST client used by the Active-Active management API |
| crdt_rest_client_timeout | integer | Timeout for REST client used by the Active-Active management API |
| created_time | string | Cluster creation date (read-only) |
| data_cipher_list | string | Specifies the enabled ciphers for the data plane. The ciphers are specified in the format understood by the OpenSSL library. |
| data_cipher_suites_tls_1_3 | string | Specifies the enabled TLS 1.3 ciphers for the data plane. |
| debuginfo_path | string | Path to a local directory used when generating support packages |
| default_non_sharded_proxy_policy | string (default:&nbsp;single) | Default proxy_policy for newly created non-sharded databases' endpoints (read-only) |
| default_sharded_proxy_policy | string (default:&nbsp;all-master-shards) | Default proxy_policy for newly created sharded databases' endpoints (read-only) |
| email_alerts | boolean (default:&nbsp;false) | Send node/cluster email alerts (requires valid SMTP and email_from settings) |
| email_from | string | Sender email for automated emails |
| encrypt_pkeys | boolean (default:&nbsp;false) | Enable or turn off encryption of private keys |
| envoy_admin_port | integer, (range:&nbsp;1024-65535) | Envoy admin port. Changing this port during runtime might result in an empty response because envoy serves as the cluster gateway.|
| envoy_max_downstream_connections | integer, (range:&nbsp;100-2048) | The max downstream connections envoy is allowed to open |
| envoy_mgmt_server_port | integer, (range:&nbsp;1024-65535) | Envoy management server port|
| gossip_envoy_admin_port | integer, (range:&nbsp;1024-65535) | Gossip envoy admin port|
| handle_redirects | boolean (default:&nbsp;false) | Handle API HTTPS requests and redirect to the master node internally |
| http_support | boolean (default:&nbsp;false) | Enable or turn off HTTP support |
| min_control_TLS_version | '1.2'<br />'1.3' | The minimum version of TLS protocol which is supported at the control path |
| min_data_TLS_version | '1.2'<br />'1.3' | The minimum version of TLS protocol which is supported at the data path |
| min_sentinel_TLS_version | '1.2'<br />'1.3' | The minimum version of TLS protocol which is supported at the data path |
| name | string | Cluster's fully qualified domain name (read-only) |
| options_method_forbidden | boolean (default: false) | Make OPTIONS http method forbidden over CNM HTTPS port. |
| password_complexity | boolean (default:&nbsp;false) | Enforce password complexity policy |
| password_expiration_duration | integer (default:&nbsp;0) | The number of days a password is valid until the user is required to replace it |
| proxy_certificate | string | Cluster's proxy certificate |
| proxy_max_ccs_disconnection_time | integer | Cluster-wide proxy timeout policy between proxy and CCS |
| rack_aware | boolean | Cluster operates in a rack-aware mode (read-only) |
| reserved_ports | array of strings | Ports and port ranges that the cluster does not use for database endpoints or internal shard traffic (for example `"reserved_ports": ["11000", "13000-13010", "20048"]`) |
| s3_ca_cert | string | Filepath to the PEM-encoded CA certificate to use for validating TLS connections to the S3 server |
| s3_url | string | Specifies the URL for S3 export and import |
| sentinel_cipher_suites | array | Specifies the list of enabled ciphers for the sentinel service. The supported ciphers are those implemented by the [cipher_suites.go](<https://golang.org/src/crypto/tls/cipher_suites.go>) package. |
| sentinel_cipher_suites_tls_1_3 | string | Specifies the list of enabled TLS 1.3 ciphers for the discovery (sentinel) service. The supported ciphers are those implemented by the [cipher_suites.go](<https://golang.org/src/crypto/tls/cipher_suites.go>) package.(read-only) |
| sentinel_tls_mode | 'allowed'<br />'disabled' <br />'required' | Determines whether the discovery service allows, blocks, or requires TLS connections (previously named `sentinel_ssl_policy`)<br />**allowed**: Allows both TLS and non-TLS connections<br />**disabled**: Allows only non-TLS connections<br />**required**: Allows only TLS connections |
| slave_ha | boolean (default:&nbsp;false) | Enable the replica high-availability mechanism (read-only) |
| slave_ha_bdb_cooldown_period | integer (default:&nbsp;86400) | Time in seconds between runs of the replica high-availability mechanism on different nodes on the same database (read-only) |
| slave_ha_cooldown_period | integer (default:&nbsp;3600) | Time in seconds between runs of the replica high-availability mechanism on different nodes (read-only) |
| slave_ha_grace_period | integer (default:&nbsp;900) | Time in seconds between a node failure and when the replica high-availability mechanism starts relocating shards (read-only) |
| slowlog_in_sanitized_support | boolean | Whether to include slowlogs in the sanitized support package |
| smtp_host | string | SMTP server for automated emails |
| smtp_password | string | SMTP server password |
| smtp_port | integer | SMTP server port for automated emails |
| smtp_tls_mode | 'none'<br />'starttls'<br />'tls' | Specifies which TLS mode to use for SMTP access |
| smtp_use_tls | boolean (default:&nbsp;false) | Use TLS for SMTP access (deprecated as of Redis Enterprise v4.3.3, use smtp_tls_mode field instead) |
| smtp_username | string | SMTP server username (pattern does not allow special characters &,\<,>,") |
| syncer_certificate | string | Cluster's syncer certificate |
| upgrade_mode | boolean (default:&nbsp;false) | Is cluster currently in upgrade mode |
| use_external_ipv6 | boolean (default:&nbsp;true) | Should redislabs services listen on ipv6 |
| use_ipv6 | boolean (default:&nbsp;true) | Should redislabs services listen on ipv6 (deprecated as of Redis Enterprise v6.4.2, replaced with use_external_ipv6) |
| wait_command | boolean (default:&nbsp;true) | Supports Redis wait command (read-only) |
